--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
   "dependencies": {
     "es6-promise": "^2.3.0",
     "glob": "^5.0.10",
-    "restify": "^3.0.3"
+    "restify": "^3.0.3",
+    "semver": "^4.3.6"
+  },
+  "devDependencies": {
+    "chai": "^3.0.0",
+    "sinon": "^1.15.3",
+    "supertest": "^1.0.1"
   }
 }
