--- a/package.json
+++ b/package.json
@@ -20,11 +20,18 @@
     "es6-promise": "^2.3.0",
     "glob": "^5.0.10",
     "restify": "^3.0.3",
-    "semver": "^4.3.6"
+    "semver": "^4.3.6",
+    "yargs": "^3.12.0"
   },
   "devDependencies": {
     "chai": "^3.0.0",
+    "chai-as-promised": "^5.1.0",
+    "gulp": "^3.9.0",
+    "gulp-debug": "^2.0.1",
+    "gulp-istanbul": "^0.10.0",
+    "gulp-mocha": "^2.1.1",
     "sinon": "^1.15.3",
+    "sinon-chai": "^2.8.0",
     "supertest": "^1.0.1"
   }
 }
