(feat) add prefix middleware

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "es6-promise": "^2.3.0",
     "glob": "^5.0.10",
+    "object-assign": "^3.0.0",
     "restify": "^3.0.3",
     "semver": "^4.3.6",
     "yargs": "^3.12.0"
