--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp test",
+    "coveralls": "gulp coveralls"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "dependencies": {
     "es6-promise": "^2.3.0",
     "glob": "^5.0.10",
+    "gulp-coveralls": "^0.1.4",
     "object-assign": "^3.0.0",
     "restify": "^3.0.3",
     "semver": "^4.3.6",
