--- a/package.json
+++ b/package.json
@@ -20,21 +20,21 @@
   "dependencies": {
     "es6-promise": "^2.3.0",
     "glob": "^5.0.10",
-    "gulp-coveralls": "^0.1.4",
     "object-assign": "^3.0.0",
     "restify": "^3.0.3",
-    "semver": "^4.3.6",
-    "yargs": "^3.12.0"
+    "semver": "^4.3.6"
   },
   "devDependencies": {
     "chai": "^3.0.0",
     "chai-as-promised": "^5.1.0",
     "gulp": "^3.9.0",
+    "gulp-coveralls": "^0.1.4",
     "gulp-debug": "^2.0.1",
     "gulp-istanbul": "^0.10.0",
     "gulp-mocha": "^2.1.1",
     "sinon": "^1.15.3",
     "sinon-chai": "^2.8.0",
-    "supertest": "^1.0.1"
+    "supertest": "^1.0.1",
+    "yargs": "^3.12.0"
   }
 }
