--- a/circle.yml
+++ b/circle.yml
@@ -10,4 +10,9 @@ test:
   override:
     - npm run lint
     - npm run test
-    - npm run coveralls
+
+deployment:
+  coverage:
+    branch: master
+    commands:
+      - npm run coveralls
