--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "homepage": "https://github.com/classicalmusic/classicaldb-service-metadata#readme",
   "dependencies": {
     "es6-promise": "https://registry.npmjs.org/es6-promise/-/es6-promise-2.3.0.tgz",
-    "glob": "https://registry.npmjs.org/glob/-/glob-5.0.10.tgz",
+    "glob": "^5.0.12",
     "object-assign": "^3.0.0",
     "pg": "^4.4.0",
     "pg-hstore": "^2.3.2",
@@ -36,11 +36,11 @@
     "gulp-debug": "^2.0.1",
     "gulp-eslint": "^0.14.0",
     "gulp-istanbul": "^0.10.0",
-    "gulp-mocha": "^2.1.1",
+    "gulp-mocha": "^2.1.2",
     "gulp-open": "^0.3.2",
-    "sinon": "^1.15.3",
+    "sinon": "^1.15.4",
     "sinon-chai": "^2.8.0",
     "supertest": "^1.0.1",
-    "yargs": "^3.12.0"
+    "yargs": "^3.14.0"
   }
 }
