--- a/package.json
+++ b/package.json
@@ -23,28 +23,28 @@
   },
   "homepage": "https://github.com/classicalmusic/classicaldb-service-metadata#readme",
   "dependencies": {
-    "es6-promise": "https://registry.npmjs.org/es6-promise/-/es6-promise-2.3.0.tgz",
-    "glob": "^5.0.12",
-    "object-assign": "^3.0.0",
-    "pg": "^4.4.0",
-    "pg-hstore": "^2.3.2",
-    "restify": "^3.0.3",
-    "semver": "^4.3.6",
-    "sequelize": "^3.3.2"
+    "es6-promise": "https://registry.npmjs.org/es6-promise/-/es6-promise-3.0.2.tgz",
+    "glob": "5.0.14",
+    "object-assign": "4.0.1",
+    "pg": "4.4.1",
+    "pg-hstore": "2.3.2",
+    "restify": "4.0.3",
+    "semver": "5.0.3",
+    "sequelize": "3.9.0"
   },
   "devDependencies": {
-    "chai": "^3.0.0",
-    "chai-as-promised": "^5.1.0",
-    "gulp": "^3.9.0",
-    "gulp-coveralls": "^0.1.4",
-    "gulp-debug": "^2.0.1",
-    "gulp-eslint": "^0.14.0",
-    "gulp-istanbul": "^0.10.0",
-    "gulp-mocha": "^2.1.2",
-    "gulp-open": "^0.3.2",
-    "sinon": "^1.15.4",
-    "sinon-chai": "^2.8.0",
-    "supertest": "^1.0.1",
-    "yargs": "^3.14.0"
+    "chai": "3.2.0",
+    "chai-as-promised": "5.1.0",
+    "gulp": "3.9.0",
+    "gulp-coveralls": "0.1.4",
+    "gulp-debug": "2.1.0",
+    "gulp-eslint": "1.0.0",
+    "gulp-istanbul": "0.10.0",
+    "gulp-mocha": "2.1.3",
+    "gulp-open": "1.0.0",
+    "sinon": "1.16.1",
+    "sinon-chai": "2.8.0",
+    "supertest": "1.1.0",
+    "yargs": "3.25.0"
   }
 }
