--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "lint": "gulp lint",
-    "test": "gulp test",
-    "coveralls": "gulp coveralls"
+    "start": "node server.js"
   },
   "engines": {
     "node": "0.12.4"
@@ -33,15 +30,17 @@
     "sequelize": "3.9.0"
   },
   "devDependencies": {
-    "chai": "3.2.0",
+    "babel": "^6.5.2",
+    "babel-cli": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-register": "^6.7.2",
+    "chai": "^3.2.0",
     "chai-as-promised": "5.1.0",
-    "gulp": "3.9.0",
-    "gulp-coveralls": "0.1.4",
-    "gulp-debug": "2.1.0",
-    "gulp-eslint": "1.0.0",
-    "gulp-istanbul": "0.10.0",
-    "gulp-mocha": "2.1.3",
-    "gulp-open": "1.0.0",
+    "coveralls": "^2.11.9",
+    "eslint": "^2.6.0",
+    "eslint-config-airbnb": "^6.2.0",
+    "istanbul": "1.0.0-alpha.2",
+    "mocha": "^2.4.5",
     "sinon": "1.16.1",
     "sinon-chai": "2.8.0",
     "supertest": "1.1.0",
