--- a/circle.yml
+++ b/circle.yml
@@ -10,7 +10,7 @@ dependencies:
 
 test:
   override:
-    # - make lint (Temporarily disabled for future refactor to ES2015)
+    - make lint
     - make test
 
 deployment:
