--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
-    "extends": "airbnb/base",
-    "env": {
-      "node": true,
-      "mocha": true
-    }
+  "parser": "babel-eslint",
+  "extends": "airbnb/base",
+   "env": {
+    "node": true,
+    "mocha": true
+  }
 }
