--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
     "glob": "5.0.14",
     "pg": "4.4.1",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
+    "babel-eslint": "^6.0.2",
     "chai": "^3.2.0",
     "chai-as-promised": "5.1.0",
     "coveralls": "^2.11.9",
