--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node main.js"
   },
   "engines": {
-    "node": "4.1.0"
+    "node": "4.1.0",
+    "npm": "3.3.12"
   },
   "repository": {
     "type": "git",
