Fix Broken Shields

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "classicaldb-service-metadata",
+  "name": "api.classicaldb.org",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
