--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node main.js"
   },
   "engines": {
-    "node": "4.1.0",
-    "npm": "3.3.12"
+    "node": "5.10.1",
+    "npm": "3.8.6"
   },
   "repository": {
     "type": "git",
@@ -25,28 +25,27 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
-    "glob": "5.0.14",
-    "pg": "4.4.1",
-    "pg-hstore": "2.3.2",
+    "glob": "^7.0.3",
+    "pg": "^4.5.3",
+    "pg-hstore": "^2.3.2",
     "pm2": "^1.1.1",
-    "restify": "4.0.3",
-    "semver": "5.0.3",
-    "sequelize": "^3.20.0"
+    "restify": "^4.0.4",
+    "semver": "^5.1.0",
+    "sequelize": "^3.21.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.6.5",
+    "babel-cli": "^6.7.5",
     "babel-eslint": "^6.0.2",
     "chai": "^3.2.0",
-    "chai-as-promised": "5.1.0",
+    "chai-as-promised": "^5.3.0",
     "coveralls": "^2.11.9",
     "dirty-chai": "^1.2.2",
-    "eslint": "^2.6.0",
+    "eslint": "^2.7.0",
     "eslint-config-airbnb": "^6.2.0",
     "istanbul": "1.0.0-alpha.2",
     "mocha": "^2.4.5",
-    "sinon": "1.16.1",
-    "sinon-chai": "2.8.0",
-    "supertest": "1.1.0",
-    "yargs": "3.25.0"
+    "sinon": "^1.17.3",
+    "sinon-chai": "^2.8.0",
+    "supertest": "^1.2.0"
   }
 }
